force-app/main/default/objects/Opportunity/fields/BDL_CDA_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>BDL_CDA_Execution_Date__c</fullName>
    <description>Date for CDA Execution.
Demen S. 22nd March 2023.</description>
    <label>CDA Execution Date</label>
    <type>Date</type>
</CustomField>