force-app/main/default/objects/Opportunity/fields/BDL_CDA_Status__c.field-meta.xml
<CustomField>
    <fullName>BDL_CDA_Status__c</fullName>
    <description>CDA Status for Opportunities. This list can be adjusted but keep in mind that it&apos;s used by a Validation Rule OOTB. Please deactivate if needed. If integrated with another system, keep in mind that these values are restricted currently. you can deactivate the restriction via the checkbox above.
Demen S. 22nd March 2023.</description>
    <label>CDA Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Executed</fullName>
            </value>
            <value>
                <fullName>Not Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>