force-app/main/default/objects/Opportunity/fields/BDL_Clinical_Trials__c.field-meta.xml
<CustomField>
    <fullName>BDL_Clinical_Trials__c</fullName>
    <description>Clinical Trial/s for this Deal. If Trial information is needed in detail within the system you can create a custom object.
Demen S. 22nd March 2023.</description>
    <label>Clinical Trials</label>
    <type>Url</type>
</CustomField>