force-app/main/default/objects/Opportunity/fields/BDL_Development_Phase__c.field-meta.xml
<CustomField>
    <fullName>BDL_Development_Phase__c</fullName>
    <description>Development Phase for Opportunity using the global value set &apos;development phase&apos;. If you need new values, please add to the value set.
Demen S. 22nd March 2023.ö</description>
    <label>Development Phase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_Development_Phase</valueSetName>
    </valueSet>
</CustomField>