force-app/main/default/objects/Opportunity/fields/BDL_DOI__c.field-meta.xml
<CustomField>
    <fullName>BDL_DOI__c</fullName>
    <description>DOI for this Deal. If DOI information is needed in detail or multiple DOI Links within the system you can create a custom object.
Demen S. 22nd March 2023.</description>
    <label>DOI</label>
    <type>Url</type>
</CustomField>