force-app/main/default/objects/Opportunity/fields/BDL_Material_Transfer_Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>BDL_Material_Transfer_Agreement_Status__c</fullName>
    <description>Transfer Agreement Status using global value set &apos;bdl status&apos;.
Demen S. 22nd March 2023.</description>
    <label>Material Transfer Agreement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_BDL_Status</valueSetName>
    </valueSet>
</CustomField>