force-app/main/default/objects/Opportunity/fields/BDL_PubMed__c.field-meta.xml
<CustomField>
    <fullName>BDL_PubMed__c</fullName>
    <description>PubMed Link for this Deal.If PubMed information is needed in detail or multiple PubMed resources within the system you can create a custom object.
Demen S. 22nd March 2023.</description>
    <label>PubMed</label>
    <type>Url</type>
</CustomField>