force-app/main/default/objects/Opportunity/fields/BDL_Risk_Assessment_Status__c.field-meta.xml
<CustomField>
    <fullName>BDL_Risk_Assessment_Status__c</fullName>
    <description>Status to reflect updates from Risk Assessment Team.
Demen S. 22nd March 2023.</description>
    <label>Risk Assessment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>