force-app/main/default/objects/Opportunity/fields/BDL_Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>BDL_Therapeutic_Area__c</fullName>
    <description>Therapeutic Area using the global value set &apos;Therapeutic Area&apos;.
Demen S. 22nd March 2023.</description>
    <label>Therapeutic Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BDL_Therapeutic_Area</valueSetName>
    </valueSet>
</CustomField>