force-app/main/default/objects/Opportunity/recordTypes/BDL_BD_L_In_Licensing.recordType-meta.xml
<RecordType>
    <fullName>BDL_BD_L_In_Licensing</fullName>
    <active>true</active>
    <businessProcess>BDL In-Licensing Process</businessProcess>
    <label>BD&amp;L In-Licensing</label>
</RecordType>