force-app/main/default/objects/Opportunity/recordTypes/BDL_BD_L_Out_Licensing.recordType-meta.xml
<RecordType>
    <fullName>BDL_BD_L_Out_Licensing</fullName>
    <active>true</active>
    <businessProcess>BDL Out-Licensing Process</businessProcess>
    <label>BD&amp;L Out-Licensing</label>
</RecordType>