force-app/main/default/objects/Opportunity/listViews/BDL_Out_Licensing_Opportunities.listView-meta.xml
<ListView>
    <fullName>BDL_Out_Licensing_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.TYPE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>BDL_CDA_Status__c</columns>
    <columns>BDL_Therapeutic_Area__c</columns>
    <columns>BDL_Risk_Assessment_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.BDL_BD_L_Out_Licensing</value>
    </filters>
    <label>Out-Licensing Opportunities</label>
    <sharedTo>
        <group>BDL_BDL_All_Users</group>
    </sharedTo>
</ListView>